--- a/code.ipynb
+++ b/code.ipynb
@@ -471,28 +471,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "avai = 0\n",
-    "nava = 0\n",
-    "\n",
-    "def booler(item):\n",
-    "    if item == 't':\n",
-    "        return 1\n",
-    "    else :\n",
-    "        return 0\n",
-    "\n",
-    "\n",
-    "avai/len(cal.available)\n",
-    "days = cal.date.value_counts().index\n",
-    "\n",
-    "a={}\n",
-    "\n",
-    "\n",
-    "for d in days:\n",
-    "    a[d] = cal.available[cal.date == d]\n",
-    "\n",
-    "a['2016-12-28']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -501,6 +480,13 @@
    "outputs": [],
    "source": [
     "def ave(s):\n",
+    "    '''\n",
+    "    INPUT - list\n",
+    "    \n",
+    "    OUTPUT - average/percentage of non-empty dates\n",
+    "    \n",
+    "    Computes the percentage of non-empty dates in the list\n",
+    "    '''\n",
     "    t = 0\n",
     "    for item in s:\n",
     "        if item == 't':\n",
@@ -840,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
